# midi-grammar

./: README.md  piano.py  pyproject.toml  simpler.py
midi_grammar/: grammar.py  midi_grammar.py  util.py
